large css width done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="wrapper">
   
 				<div id="clientUSER">
-					<p id="currentUser"></p>
+					<h2 id="currentUser"></h2>
 				</div>
     
 				<div id="ads">
@@ -25,8 +25,8 @@
 			</div>
 		</div>
 	
-		<p><br /></p>
-		<div id="wrapper">
+		
+		<div id="wrapper1">
 			<div id="content">
 				<ul id="messages"></ul>
 			</div>
